--- a/ckanext/feedback/templates/resource/comment.html
+++ b/ckanext/feedback/templates/resource/comment.html
@@ -20,10 +20,12 @@
       <div class="module-content">
         <div class="centered-content">
           <h4>{{ _('Dataset') }}</h4>
-          <a href="{{ h.url_for('dataset.search') }}{{ pkg_dict.name }}">{{ pkg_dict.name }}</a>
-          <hr>
-          <h4>{{ _('Resource') }}</h4>
-          <a href="{{ h.url_for('dataset.search') }}{{ pkg_dict.name }}/resource/{{ resource.id }}">{{ resource.name }}</a>
+          <div class="wrap-text prevent-overflow">
+            <a href="{{ h.url_for('dataset.search') }}{{ pkg_dict.name }}">{{ pkg_dict.name }}</a>
+            <hr>
+            <h4>{{ _('Resource') }}</h4>
+            <a href="{{ h.url_for('dataset.search') }}{{ pkg_dict.name }}/resource/{{ resource.id }}">{{ resource.name }}</a>
+          </div>
           <hr>
           <h4>{{ _('Comments') }}</h4>
           <p>{{ h.get_resource_comments(resource.id) }}</p>
@@ -106,13 +108,13 @@
                 {{ _('Unapproved') }}
               {% endif %}
             </h4>
-            <div class="comment-content {{'unapproved' if not comment.approval }}">
+            <div class="comment-content wrap-text {{'unapproved' if not comment.approval }}">
               <p>{{ comment.content }}</p>
             </div>
             {% if reply %}
               <hr>
               <h4 class="reply">{{ reply.created.strftime('%Y/%m/%d %H:%M') }}</h4>
-              <p class="comment-content reply">{{ reply.content }}</p>
+              <p class="comment-content wrap-text reply">{{ reply.content }}</p>
             {% endif %}
             <hr class="divider">
           {% endfor %}
@@ -130,7 +132,7 @@
             </div>
             <div class="modal-body">
               <h4 id="selected_comment_header"></h4>
-              <p class="comment-content" id="selected_comment"></p>
+              <p class="comment-content wrap-text" id="selected_comment"></p>
               <div class="form-group control-full">
                 <label class="control-label" for="code">{{ _('Input') }}</label>
                 <div class="controls ">
