Fix reply form action url and add class to hidden input to use in JavaScript

--- a/ckanext/feedback/templates/resource/comment.html
+++ b/ckanext/feedback/templates/resource/comment.html
@@ -123,8 +123,8 @@
     <div id="reply-form-window" class="modal fade" tabindex="-1">
       <div class="modal-dialog">
         <div class="modal-content">
-          <form id="reply-form" class="top-centered-content" action="{{ url_for('resource_comment.reply', resource_id=resource_id ) }}" method="post">
-            <input type="hidden" id="resource_comment_id" name="resource_comment_id">
+          <form id="reply-form" class="top-centered-content" action="{{ url_for('resource_comment.reply', resource_id=resource.id ) }}" method="post">
+            <input type="hidden" id="selected_resource_comment_id" name="resource_comment_id">
             <div class="modal-header">
               <button type="button" class="close" data-dismiss="modal">&times;</button>
             </div>
